classiq/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@media screen and (prefers-color-scheme: dark) {
  .html {
    background-color: #1a202c;
  }
}

@layer utilities {
      /* Chrome, Safari and Opera */
      .no-scrollbar::-webkit-scrollbar {
        display: none;
      }
  
      .no-scrollbar {
        -ms-overflow-style: none; /* IE and Edge */
        scrollbar-width: none; /* Firefox */
      }
}

